[gd_scene load_steps=9 format=3 uid="uid://bffcf7iwcgdw8"]

[ext_resource type="Script" uid="uid://cj8imcoauc06i" path="res://scripts/enemy.gd" id="1_d7j71"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="2_ktqfp"]
[ext_resource type="Texture2D" uid="uid://b5mpgx51ob4xh" path="res://images/palettes/palette.png" id="3_defa4"]
[ext_resource type="AudioStream" uid="uid://cuxkoyv8ajx5l" path="res://audio/sfx-kick.mp3" id="4_defa4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67neu"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_defa4"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jr1g6"]
shader = ExtResource("2_ktqfp")
shader_parameter/palette = ExtResource("3_defa4")
shader_parameter/accessRow = 1

[sub_resource type="SpriteFrames" id="SpriteFrames_d7j71"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_d7j71")
wakeUpTime = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_67neu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 13
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_defa4")
debug_color = Color(1, 0, 1, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_jr1g6")
sprite_frames = SubResource("SpriteFrames_d7j71")
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_defa4")
attenuation = 1e-05
panning_strength = 0.0

[node name="WakeTimer" type="Timer" parent="."]

[node name="EdgeLeft" type="RayCast2D" parent="."]
position = Vector2(2, 0)
target_position = Vector2(0, 8)

[node name="EdgeRight" type="RayCast2D" parent="."]
position = Vector2(-2, 0)
target_position = Vector2(0, 8)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="WakeTimer" to="." method="_on_wake_timer_timeout"]
